# etodo

./: README.md  docker-compose.yml
etodo_api/: .gitignore  Dockerfile  pyproject.toml
etodo_api/resources/: development.ini  production.ini  qa.ini
etodo_api/src/: manage.py
etodo_api/src/etodo/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
etodo_api/src/tracking/: admin.py  apps.py  filters.py  helpers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
etodo_api/src/tracking/migrations/: 0001_initial.py  0002_task_is_completed.py  0003_alter_task_is_completed.py
etodo_api/src/user/: admin.py  models.py  serializers.py  urls.py  views.py
etodo_api/src/user/migrations/: 0001_initial.py
etodo_webui/: Dockerfile  index.html  package-lock.json  package.json
etodo_webui/src/: App.jsx
etodo_webui/src/components/CreateItem/: index.jsx
etodo_webui/src/components/ListItem/: index.jsx
etodo_webui/src/components/ListItem/Paginator/: index.jsx
etodo_webui/src/components/ListItem/Table/: index.jsx
etodo_webui/src/components/Login/: index.jsx
etodo_webui/src/components/Navbar/: index.jsx
etodo_webui/src/components/icons/LeftArrow/: index.jsx
etodo_webui/src/components/icons/RightArrow/: index.jsx
etodo_webui/src/constants/: api.js  browser.js  index.js
etodo_webui/src/hooks/: useListItem.js  useUser.js
etodo_webui/src/pages/Dashboard/: index.jsx
etodo_webui/src/pages/Home/: index.jsx
etodo_webui/src/pages/Http404/: index.jsx
etodo_webui/src/providers/ListItemProvider/: index.jsx
nginx/: default.conf
